--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Simulador XAUUSD - FRF</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap 5 CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      color: #000;
       background: #f0f0f0;
       overflow-x: hidden;
     }
 
-    /* EFEITO MATRIX */
     #matrix {
       position: fixed;
       top: 0;
@@ -27,49 +28,23 @@
       display: block;
     }
 
-    /* CONTAINER DO SIMULADOR */
-    .container {
+    .content-container {
       position: relative;
       z-index: 2;
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: 120px auto 40px auto;
-      background: rgba(255, 255, 255, 0.85);
+      margin-top: 80px;
+      background: rgba(255, 255, 255, 0.95);
       border-radius: 10px;
+      padding: 30px;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-
-    input[type=number], select {
-      width: 120px;
-      margin: 5px;
-    }
-
-    .ordem {
-      margin-bottom: 10px;
-    }
-
-    .bloco {
-      margin-top: 20px;
-    }
-
-    /* TÍTULO E LOGO LADO A LADO */
-    .titulo-logo {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      gap: 20px;
-      margin-bottom: 20px;
     }
 
     .titulo-logo img {
-      width: 100px;
+      width: 90px;
       height: auto;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
       animation: pulse 2.5s infinite;
     }
 
-    /* ANIMAÇÃO DO LOGO */
     @keyframes pulse {
       0% { transform: scale(1); }
       50% { transform: scale(1.07); }
@@ -78,43 +53,67 @@
   </style>
 </head>
 <body>
-  <!-- FUNDO MATRIX -->
+
+  <!-- MATRIX BACKGROUND -->
   <div id="matrix"><canvas id="matrixCanvas"></canvas></div>
 
-  <!-- CONTEÚDO -->
-  <div class="container">
-    <div class="titulo-logo">
-      <h2>Simulador XAUUSD - Preço Alvo e Lucro Atual</h2>
+  <div class="container content-container">
+    <div class="d-flex justify-content-between align-items-center flex-wrap mb-4 titulo-logo">
+      <h2 class="mb-2">Simulador XAUUSD - Preço Alvo e Lucro Atual</h2>
       <img src="logo-frf.png" alt="Logo FRF">
     </div>
 
-    <label>Tipo de Operação:
-      <select id="tipoOperacao">
-        <option value="buy">Buy (Compra)</option>
-        <option value="sell">Sell (Venda)</option>
-      </select>
-    </label><br>
-
-    <label>Número de Ordens: <input type="number" id="numOrdens" value="1" min="1"></label>
-    <button onclick="gerarOrdens()">Gerar Ordens</button>
-
-    <div id="formularioOrdens"></div>
-
-    <div class="bloco">
-      <label>Lucro Desejado (US$): <input type="number" id="lucroDesejado" value="1000"></label><br>
-      <label>Spread (em pontos): <input type="number" id="spreadPontos" value="16" step="0.1" min="0"></label><br>
-      <button onclick="calcularPrecoSaida()">Calcular Preço de Saída</button>
-      <h3 id="resultadoSaida"></h3>
+    <div class="row mb-3">
+      <div class="col-md-4">
+        <label class="form-label">Tipo de Operação:</label>
+        <select id="tipoOperacao" class="form-select">
+          <option value="buy">Buy (Compra)</option>
+          <option value="sell">Sell (Venda)</option>
+        </select>
+      </div>
+      <div class="col-md-4">
+        <label class="form-label">Número de Ordens:</label>
+        <input type="number" id="numOrdens" class="form-control" value="1" min="1">
+      </div>
+      <div class="col-md-4 d-flex align-items-end">
+        <button onclick="gerarOrdens()" class="btn btn-primary w-100">Gerar Ordens</button>
+      </div>
     </div>
 
-    <div class="bloco">
-      <label>Preço Atual XAUUSD: <input type="number" id="precoAtual" step="0.01"></label>
-      <button onclick="calcularLucroAtual()">Calcular Lucro/Prejuízo Atual</button>
-      <h3 id="resultadoLucro"></h3>
+    <div id="formularioOrdens" class="mb-4"></div>
+
+    <div class="row g-3 mb-4">
+      <div class="col-md-6">
+        <label class="form-label">Lucro Desejado (US$):</label>
+        <input type="number" id="lucroDesejado" class="form-control" value="1000">
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Spread (em pontos):</label>
+        <input type="number" id="spreadPontos" class="form-control" value="16" step="0.1" min="0">
+      </div>
+      <div class="col-12">
+        <button onclick="calcularPrecoSaida()" class="btn btn-success w-100">Calcular Preço de Saída</button>
+        <h5 id="resultadoSaida" class="mt-3"></h5>
+      </div>
+    </div>
+
+    <div class="row g-3">
+      <div class="col-md-6">
+        <label class="form-label">Preço Atual XAUUSD:</label>
+        <input type="number" id="precoAtual" class="form-control" step="0.01">
+      </div>
+      <div class="col-md-6 d-flex align-items-end">
+        <button onclick="calcularLucroAtual()" class="btn btn-warning w-100">Calcular Lucro/Prejuízo Atual</button>
+      </div>
+      <div class="col-12">
+        <h5 id="resultadoLucro" class="mt-3"></h5>
+      </div>
     </div>
   </div>
 
-  <!-- SCRIPT -->
+  <!-- Bootstrap JS (opcional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
   <script>
     function gerarOrdens() {
       const container = document.getElementById("formularioOrdens");
@@ -123,11 +122,15 @@
 
       for (let i = 0; i < num; i++) {
         const div = document.createElement("div");
-        div.className = "ordem";
+        div.className = "row g-2 align-items-center mb-2";
         div.innerHTML = `
-          <strong>Ordem ${i + 1}</strong> - 
-          Preço Entrada: <input type="number" step="0.01" id="preco${i}"> 
-          Lote: <input type="number" step="0.01" id="lote${i}">
+          <div class="col-12 fw-bold">Ordem ${i + 1}</div>
+          <div class="col-md-6">
+            <input type="number" step="0.01" id="preco${i}" class="form-control" placeholder="Preço Entrada">
+          </div>
+          <div class="col-md-6">
+            <input type="number" step="0.01" id="lote${i}" class="form-control" placeholder="Lote">
+          </div>
         `;
         container.appendChild(div);
       }
@@ -161,13 +164,9 @@
 
       const precoMedio = somaPrecoLote / somaLotes;
       const ajusteLucro = lucroDesejado / (somaLotes * 100);
-
-      let precoSaida = 0;
-      if (tipo === "buy") {
-        precoSaida = precoMedio + ajusteLucro + spread;
-      } else {
-        precoSaida = precoMedio - ajusteLucro - spread;
-      }
+      let precoSaida = tipo === "buy"
+        ? precoMedio + ajusteLucro + spread
+        : precoMedio - ajusteLucro - spread;
 
       document.getElementById("resultadoSaida").innerHTML = `
         Preço médio: <strong>${precoMedio.toFixed(2)}</strong><br>
@@ -181,14 +180,12 @@
       const tipo = document.getElementById("tipoOperacao").value;
       const precoAtual = parseFloat(document.getElementById("precoAtual").value);
       const num = parseInt(document.getElementById("numOrdens").value);
-
       if (isNaN(precoAtual)) {
         alert("Informe o preço atual do XAUUSD.");
         return;
       }
 
       let lucroTotal = 0;
-
       for (let i = 0; i < num; i++) {
         const precoEntrada = parseFloat(document.getElementById("preco" + i).value);
         const lote = parseFloat(document.getElementById("lote" + i).value);
@@ -197,12 +194,9 @@
           return;
         }
 
-        let lucro = 0;
-        if (tipo === "buy") {
-          lucro = (precoAtual - precoEntrada) * lote * 100;
-        } else {
-          lucro = (precoEntrada - precoAtual) * lote * 100;
-        }
+        const lucro = tipo === "buy"
+          ? (precoAtual - precoEntrada) * lote * 100
+          : (precoEntrada - precoAtual) * lote * 100;
 
         lucroTotal += lucro;
       }
@@ -212,7 +206,7 @@
       `;
     }
 
-    // MATRIX BACKGROUND
+    // EFEITO MATRIX
     const canvas = document.getElementById("matrixCanvas");
     const ctx = canvas.getContext("2d");
 
@@ -222,16 +216,13 @@
     const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
     const fontSize = 16;
     const columns = canvas.width / fontSize;
-    const drops = [];
-
-    for (let x = 0; x < columns; x++) drops[x] = 1;
+    const drops = Array.from({length: columns}).fill(1);
 
     function drawMatrix() {
       ctx.fillStyle = "rgba(255, 255, 255, 0.05)";
       ctx.fillRect(0, 0, canvas.width, canvas.height);
       ctx.fillStyle = "#0a0";
       ctx.font = fontSize + "px monospace";
-
       for (let i = 0; i < drops.length; i++) {
         const text = letters[Math.floor(Math.random() * letters.length)];
         ctx.fillText(text, i * fontSize, drops[i] * fontSize);
