--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Simulador XAUUSD - FRF</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap 5 CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -50,188 +49,234 @@
       50% { transform: scale(1.07); }
       100% { transform: scale(1); }
     }
+
+    @media (max-width: 576px) {
+      .titulo-logo {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .titulo-logo img {
+        width: 70px;
+        margin-top: 10px;
+      }
+
+      .titulo-logo h2 {
+        font-size: 1.2rem;
+      }
+
+      .content-container {
+        padding: 20px 15px;
+        margin-top: 60px;
+      }
+
+      .btn {
+        font-size: 0.9rem;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <!-- MATRIX BACKGROUND -->
-  <div id="matrix"><canvas id="matrixCanvas"></canvas></div>
+<div id="matrix"><canvas id="matrixCanvas"></canvas></div>
 
-  <div class="container content-container">
-    <div class="d-flex justify-content-between align-items-center flex-wrap mb-4 titulo-logo">
-      <h2 class="mb-2">Simulador XAUUSD - Preço Alvo e Lucro Atual</h2>
-      <img src="logo-frf.png" alt="Logo FRF">
+<div class="container content-container">
+  <div class="d-flex justify-content-between align-items-center flex-wrap mb-4 titulo-logo">
+    <h2 class="mb-2">Simulador XAUUSD - Preço Alvo e Lucro Atual</h2>
+    <img src="logo-frf.png" alt="Logo FRF">
+  </div>
+
+  <div class="row mb-3">
+    <div class="col-md-4">
+      <label class="form-label">Tipo de Operação:</label>
+      <select id="tipoOperacao" class="form-select">
+        <option value="buy">Buy (Compra)</option>
+        <option value="sell">Sell (Venda)</option>
+      </select>
     </div>
-
-    <div class="row mb-3">
-      <div class="col-md-4">
-        <label class="form-label">Tipo de Operação:</label>
-        <select id="tipoOperacao" class="form-select">
-          <option value="buy">Buy (Compra)</option>
-          <option value="sell">Sell (Venda)</option>
-        </select>
-      </div>
-      <div class="col-md-4">
-        <label class="form-label">Número de Ordens:</label>
-        <input type="number" id="numOrdens" class="form-control" value="1" min="1">
-      </div>
-      <div class="col-md-4 d-flex align-items-end">
-        <button onclick="gerarOrdens()" class="btn btn-primary w-100">Gerar Ordens</button>
-      </div>
+    <div class="col-md-4">
+      <label class="form-label">Número de Ordens:</label>
+      <input type="number" id="numOrdens" class="form-control" value="1" min="1" onchange="gerarOrdens()">
     </div>
-
-    <div id="formularioOrdens" class="mb-4"></div>
-
-    <div class="row g-3 mb-4">
-      <div class="col-md-6">
-        <label class="form-label">Lucro Desejado (US$):</label>
-        <input type="number" id="lucroDesejado" class="form-control" value="1000">
-      </div>
-      <div class="col-md-6">
-        <label class="form-label">Spread (em pontos):</label>
-        <input type="number" id="spreadPontos" class="form-control" value="16" step="0.1" min="0">
-      </div>
-      <div class="col-12">
-        <button onclick="calcularPrecoSaida()" class="btn btn-success w-100">Calcular Preço de Saída</button>
-        <h5 id="resultadoSaida" class="mt-3"></h5>
-      </div>
+    <div class="col-md-4 d-flex align-items-end">
+      <button onclick="gerarOrdens()" class="btn btn-primary w-100">Gerar Ordens</button>
     </div>
+  </div>
 
-    <div class="row g-3">
-      <div class="col-md-6">
-        <label class="form-label">Preço Atual XAUUSD:</label>
-        <input type="number" id="precoAtual" class="form-control" step="0.01">
-      </div>
-      <div class="col-md-6 d-flex align-items-end">
-        <button onclick="calcularLucroAtual()" class="btn btn-warning w-100">Calcular Lucro/Prejuízo Atual</button>
-      </div>
-      <div class="col-12">
-        <h5 id="resultadoLucro" class="mt-3"></h5>
+  <div id="formularioOrdens" class="mb-4"></div>
+
+  <div class="row g-3 mb-4">
+    <div class="col-md-6">
+      <label class="form-label">Lucro Desejado (US$):</label>
+      <input type="number" id="lucroDesejado" class="form-control" value="1000">
+    </div>
+    <div class="col-md-6">
+      <label class="form-label">Spread (em pontos):</label>
+      <input type="number" id="spreadPontos" class="form-control" value="16" step="0.1" min="0">
+    </div>
+    <div class="col-12">
+      <button onclick="calcularPrecoSaida()" class="btn btn-success w-100">Calcular Preço de Saída</button>
+      <div class="card p-3 mt-3">
+        <h5 id="resultadoSaida" class="mb-0 text-success"></h5>
       </div>
     </div>
   </div>
 
-  <!-- Bootstrap JS (opcional) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="row g-3">
+    <div class="col-md-6">
+      <label class="form-label">Preço Atual XAUUSD:</label>
+      <input type="number" id="precoAtual" class="form-control" step="0.01" placeholder="Ex: 2345.67">
+    </div>
+    <div class="col-md-6 d-flex align-items-end">
+      <button onclick="calcularLucroAtual()" class="btn btn-warning w-100">Calcular Lucro/Prejuízo Atual</button>
+    </div>
+    <div class="col-12">
+      <div class="card p-3 mt-3">
+        <h5 id="resultadoLucro" class="mb-0 text-primary"></h5>
+      </div>
+    </div>
+  </div>
+</div>
 
-  <script>
-    function gerarOrdens() {
-      const container = document.getElementById("formularioOrdens");
-      container.innerHTML = "";
-      const num = parseInt(document.getElementById("numOrdens").value);
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-      for (let i = 0; i < num; i++) {
-        const div = document.createElement("div");
-        div.className = "row g-2 align-items-center mb-2";
-        div.innerHTML = `
-          <div class="col-12 fw-bold">Ordem ${i + 1}</div>
-          <div class="col-md-6">
-            <input type="number" step="0.01" id="preco${i}" class="form-control" placeholder="Preço Entrada">
-          </div>
-          <div class="col-md-6">
-            <input type="number" step="0.01" id="lote${i}" class="form-control" placeholder="Lote">
-          </div>
-        `;
-        container.appendChild(div);
-      }
+<script>
+  function gerarOrdens() {
+    const container = document.getElementById("formularioOrdens");
+    const num = parseInt(document.getElementById("numOrdens").value);
+
+    const dadosAntigos = [];
+    for (let i = 0; i < container.children.length; i++) {
+      const preco = parseFloat(document.getElementById("preco" + i)?.value) || "";
+      const lote = parseFloat(document.getElementById("lote" + i)?.value) || "";
+      dadosAntigos.push({ preco, lote });
     }
 
-    function calcularPrecoSaida() {
-      const tipo = document.getElementById("tipoOperacao").value;
-      const num = parseInt(document.getElementById("numOrdens").value);
-      const spreadPontos = parseFloat(document.getElementById("spreadPontos").value);
-      const spread = spreadPontos * 0.01;
-      const lucroDesejado = parseFloat(document.getElementById("lucroDesejado").value);
+    container.innerHTML = "";
+    for (let i = 0; i < num; i++) {
+      const precoVal = dadosAntigos[i]?.preco ?? "";
+      const loteVal = dadosAntigos[i]?.lote ?? "";
 
-      let somaLotes = 0;
-      let somaPrecoLote = 0;
+      const div = document.createElement("div");
+      div.className = "row g-2 align-items-center mb-2";
+      div.innerHTML = `
+        <div class="col-12 fw-bold">Ordem ${i + 1}</div>
+        <div class="col-md-6">
+          <input type="number" step="0.01" id="preco${i}" class="form-control" placeholder="Preço Entrada" value="${precoVal}">
+        </div>
+        <div class="col-md-6">
+          <input type="number" step="0.01" id="lote${i}" class="form-control" placeholder="Lote" value="${loteVal}">
+        </div>
+      `;
+      container.appendChild(div);
+    }
+  }
 
-      for (let i = 0; i < num; i++) {
-        const preco = parseFloat(document.getElementById("preco" + i).value);
-        const lote = parseFloat(document.getElementById("lote" + i).value);
-        if (isNaN(preco) || isNaN(lote)) {
-          alert("Preencha todos os campos corretamente.");
-          return;
-        }
-        somaLotes += lote;
-        somaPrecoLote += preco * lote;
+  function calcularPrecoSaida() {
+    const tipo = document.getElementById("tipoOperacao").value;
+    const num = parseInt(document.getElementById("numOrdens").value);
+    const spreadPontos = parseFloat(document.getElementById("spreadPontos").value);
+    const spread = spreadPontos * 0.01;
+    const lucroDesejado = parseFloat(document.getElementById("lucroDesejado").value);
+
+    let somaLotes = 0;
+    let somaPrecoLote = 0;
+
+    for (let i = 0; i < num; i++) {
+      const preco = parseFloat(document.getElementById("preco" + i).value);
+      const lote = parseFloat(document.getElementById("lote" + i).value);
+      if (isNaN(preco) || isNaN(lote)) {
+        alert("Preencha todos os campos corretamente.");
+        return;
       }
+      somaLotes += lote;
+      somaPrecoLote += preco * lote;
+    }
 
-      if (somaLotes === 0 || isNaN(lucroDesejado)) {
-        alert("Verifique os valores preenchidos.");
+    if (somaLotes === 0 || isNaN(lucroDesejado)) {
+      alert("Verifique os valores preenchidos.");
+      return;
+    }
+
+    const precoMedio = somaPrecoLote / somaLotes;
+    const ajusteLucro = lucroDesejado / (somaLotes * 100);
+    let precoSaida = tipo === "buy"
+      ? precoMedio + ajusteLucro + spread
+      : precoMedio - ajusteLucro - spread;
+
+    document.getElementById("resultadoSaida").innerHTML = `
+      Preço médio: <strong>${precoMedio.toFixed(2)}</strong><br>
+      Spread aplicado: <strong>${spread.toFixed(2)}</strong><br>
+      Preço de saída para lucro de US$ ${lucroDesejado.toFixed(2)}: 
+      <strong>${precoSaida.toFixed(2)}</strong>
+    `;
+  }
+
+  function calcularLucroAtual() {
+    const tipo = document.getElementById("tipoOperacao").value;
+    const precoAtual = parseFloat(document.getElementById("precoAtual").value);
+    const num = parseInt(document.getElementById("numOrdens").value);
+    if (isNaN(precoAtual)) {
+      alert("Informe o preço atual do XAUUSD.");
+      return;
+    }
+
+    let lucroTotal = 0;
+    for (let i = 0; i < num; i++) {
+      const precoEntrada = parseFloat(document.getElementById("preco" + i).value);
+      const lote = parseFloat(document.getElementById("lote" + i).value);
+      if (isNaN(precoEntrada) || isNaN(lote)) {
+        alert("Preencha todos os campos corretamente.");
         return;
       }
 
-      const precoMedio = somaPrecoLote / somaLotes;
-      const ajusteLucro = lucroDesejado / (somaLotes * 100);
-      let precoSaida = tipo === "buy"
-        ? precoMedio + ajusteLucro + spread
-        : precoMedio - ajusteLucro - spread;
+      const lucro = tipo === "buy"
+        ? (precoAtual - precoEntrada) * lote * 100
+        : (precoEntrada - precoAtual) * lote * 100;
 
-      document.getElementById("resultadoSaida").innerHTML = `
-        Preço médio: <strong>${precoMedio.toFixed(2)}</strong><br>
-        Spread aplicado: <strong>${spread.toFixed(2)}</strong><br>
-        Preço de saída para lucro de US$ ${lucroDesejado.toFixed(2)}: 
-        <strong>${precoSaida.toFixed(2)}</strong>
-      `;
+      lucroTotal += lucro;
     }
 
-    function calcularLucroAtual() {
-      const tipo = document.getElementById("tipoOperacao").value;
-      const precoAtual = parseFloat(document.getElementById("precoAtual").value);
-      const num = parseInt(document.getElementById("numOrdens").value);
-      if (isNaN(precoAtual)) {
-        alert("Informe o preço atual do XAUUSD.");
-        return;
-      }
+    document.getElementById("resultadoLucro").innerHTML = `
+      Lucro/Prejuízo atual: <strong>US$ ${lucroTotal.toFixed(2)}</strong>
+    `;
+  }
 
-      let lucroTotal = 0;
-      for (let i = 0; i < num; i++) {
-        const precoEntrada = parseFloat(document.getElementById("preco" + i).value);
-        const lote = parseFloat(document.getElementById("lote" + i).value);
-        if (isNaN(precoEntrada) || isNaN(lote)) {
-          alert("Preencha todos os campos corretamente.");
-          return;
-        }
+  // Efeito Matrix
+  const canvas = document.getElementById("matrixCanvas");
+  const ctx = canvas.getContext("2d");
 
-        const lucro = tipo === "buy"
-          ? (precoAtual - precoEntrada) * lote * 100
-          : (precoEntrada - precoAtual) * lote * 100;
+  canvas.height = window.innerHeight;
+  canvas.width = window.innerWidth;
 
-        lucroTotal += lucro;
-      }
+  const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+  const fontSize = 16;
+  const columns = canvas.width / fontSize;
+  const drops = Array.from({ length: columns }).fill(1);
 
-      document.getElementById("resultadoLucro").innerHTML = `
-        Lucro/Prejuízo atual: <strong>US$ ${lucroTotal.toFixed(2)}</strong>
-      `;
+  function drawMatrix() {
+    ctx.fillStyle = "rgba(255, 255, 255, 0.05)";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+    ctx.fillStyle = "#0a0";
+    ctx.font = fontSize + "px monospace";
+    for (let i = 0; i < drops.length; i++) {
+      const text = letters[Math.floor(Math.random() * letters.length)];
+      ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+      if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
+      drops[i]++;
     }
+  }
 
-    // EFEITO MATRIX
-    const canvas = document.getElementById("matrixCanvas");
-    const ctx = canvas.getContext("2d");
+  setInterval(drawMatrix, 50);
 
-    canvas.height = window.innerHeight;
+  window.addEventListener('resize', () => {
     canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+  });
 
-    const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-    const fontSize = 16;
-    const columns = canvas.width / fontSize;
-    const drops = Array.from({length: columns}).fill(1);
+  // Gera ordem inicial ao carregar
+  window.onload = gerarOrdens;
+</script>
 
-    function drawMatrix() {
-      ctx.fillStyle = "rgba(255, 255, 255, 0.05)";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "#0a0";
-      ctx.font = fontSize + "px monospace";
-      for (let i = 0; i < drops.length; i++) {
-        const text = letters[Math.floor(Math.random() * letters.length)];
-        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
-        drops[i]++;
-      }
-    }
-
-    setInterval(drawMatrix, 50);
-  </script>
 </body>
 </html>
